# fast-gitingest

./: Cargo.toml  README.md  pyproject.toml  web.txt
.github/workflows/: publish-pypi.yml  publish-simple.yml  release.yml
gitingest/: Cargo.toml
gitingest-cli/: Cargo.toml
gitingest-cli/src/: main.rs
gitingest-python/: Cargo.toml
gitingest-python/src/: lib.rs
gitingest/src/: config.rs  error.rs  lib.rs  models.rs  services.rs  utils.rs
gitingest/src/utils/: files.rs  git.rs  patterns.rs  url_parser.rs
python/fast_gitingest/: __init__.py  main.py
python/tests/: test_gitingest.py
