[workspace]
members = ["gitingest", "gitingest-cli"]
resolver = "2"

[workspace.dependencies]
# Core library
gitingest = { path = "gitingest" }

# Common dependencies shared across multiple packages
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"
