[package]
name = "gitingest-cli"
version = "0.1.0"
edition = "2024"
authors = ["Anang Aji Rahmawan <aji.abuismail@gmail.com>"]
description = "Fast Git repository ingestion CLI tool"
license = "MIT"
repository = "https://github.com/0yik/fast-gitingest"

[[bin]]
name = "gitingest"
path = "src/main.rs"

[dependencies]
# Core library
gitingest = { workspace = true }

# Shared workspace dependencies
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
uuid = { workspace = true }

# CLI specific dependencies
clap = { version = "4.4", features = ["derive"] }