[package]
name = "gitingest-python"
version = "0.1.0"
edition = "2024"
authors = ["Anang Aji Rahmawan <aji.abuismail@gmail.com>"]
description = "Python bindings for the fast Git repository ingestion tool"
license = "MIT"
repository = "https://github.com/0yik/fast-gitingest"

[lib]
name = "gitingest_python"
crate-type = ["cdylib"]

[dependencies]
# Core library
gitingest = { workspace = true }

# Shared workspace dependencies
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

[build-dependencies]
pyo3-build-config = "0.20"